overflow-y fix

--- a/css/master.css
+++ b/css/master.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  overflow-y: scroll;
 }
 
 #content {
